--- a/app-dam/src/backend/package.json
+++ b/app-dam/src/backend/package.json
@@ -9,8 +9,9 @@
   "author": "Agustin Bassi, Brian Ducca",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "jsonwebtoken": "~9.0.1"
+    "jsonwebtoken": "~9.0.1",
+    "mysql": "^2.18.1"
   }
 }
